# ipc

./: CMakeLists.txt  README.md  calculator_client.cpp  calculator_service.cpp
